--- a/aulas/01-fundamentos-reactjs/src/global.css
+++ b/aulas/01-fundamentos-reactjs/src/global.css
@@ -4,11 +4,17 @@
   --gray-300: #c4c4cc;
   --gray-400: #8d8d99;
   --gray-600: #323238;
+  --gray-700: #29292e;
   --gray-800: #202024;
   --gray-900: #121214;
 
   --green-300: #00B37E;
   --green-500: #00875f;
+}
+
+:focus{
+  outline: transparent;
+  box-shadow: 0 0 0 2px var(--green-500);
 }
 
 *{
