--- a/aulas/01-fundamentos-ractjs-ts/src/global.css
+++ b/aulas/01-fundamentos-ractjs-ts/src/global.css
@@ -31,7 +31,7 @@ body{
   -webkit-font-smoothing: antialiased;
 }
 
-body, input, textarea, buttun{
+body, input, textarea, button{
   font-family: "Roboto", sans-serif;
   font-weight: 400;
   font-size: 1rem;
